crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-1.stderr
TOML parse error at line 1, column 29
  |
1 | bad-uni-esc-ml-1 = """val\ue"""
  |                             ^
too few unicode value digits, expected unicode hexadecimal value
